--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
     "chart.js": "^2.7.2",
+    "express": "^4.16.2",
+    "foreman": "2.0.0",
+    "global-request-logger": "^0.1.1",
     "json-bigint": "^0.2.3",
     "material-icons": "^0.1.0",
     "moment": "^2.20.1",
+    "morgan": "^1.9.0",
     "node-fetch": "^2.0.0",
     "request": "^2.85.0",
+    "serve-static": "^1.13.2",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-chartjs": "^3.3.1",
@@ -25,12 +31,7 @@
     "vue2-datatable-component": "^2.2.2",
     "vuetify": "^1.0.3",
     "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.4.2",
-    "body-parser": "^1.18.2",
-    "express": "^4.16.2",
-    "foreman": "2.0.0",
-    "global-request-logger": "^0.1.1",
-    "morgan": "^1.9.0"
+    "vuex-persistedstate": "^2.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
