--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "vue2-datatable-component": "^2.2.2",
     "vuetify": "^1.0.3",
     "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.4.2"
+    "vuex-persistedstate": "^2.4.2",
+    "connect-history-api-fallback": "^1.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
@@ -42,7 +43,6 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "chalk": "^2.1.0",
-    "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^4.1.1",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
