--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "chart.js": "^2.7.2",
+    "connect-history-api-fallback": "^1.5.0",
     "express": "^4.16.2",
     "foreman": "2.0.0",
     "global-request-logger": "^0.1.1",
     "json-bigint": "^0.2.3",
     "material-icons": "^0.1.0",
-    "moment": "^2.20.1",
+    "moment": "^2.22.1",
+    "moment-timezone": "^0.5.16",
     "morgan": "^1.9.0",
     "node-fetch": "^2.0.0",
     "request": "^2.85.0",
@@ -27,12 +29,13 @@
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-chartjs": "^3.3.1",
+    "vue-moment": "^3.2.0",
     "vue-router": "^3.0.1",
+    "vue-spinner": "^1.0.3",
     "vue2-datatable-component": "^2.2.2",
     "vuetify": "^1.0.3",
     "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.4.2",
-    "connect-history-api-fallback": "^1.5.0"
+    "vuex-persistedstate": "^2.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
