--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-fetch": "^2.0.0",
     "request": "^2.85.0",
     "serve-static": "^1.13.2",
+    "uglify-js": "^3.3.23",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-chartjs": "^3.3.1",
@@ -33,6 +34,7 @@
     "vue-router": "^3.0.1",
     "vue-spinner": "^1.0.3",
     "vue2-datatable-component": "^2.2.2",
+    "vue2-google-maps": "^0.9.6",
     "vuetify": "^1.0.3",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.4.2"
@@ -64,6 +66,7 @@
     "shelljs": "^0.7.8",
     "sw-precache-webpack-plugin": "^0.11.4",
     "uglify-es": "^3.1.3",
+    "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
     "url-loader": "^0.6.2",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.3",
