--- a/package.json
+++ b/package.json
@@ -5,31 +5,38 @@
   "author": "Cory Guynn",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
+    "dev": "node build/dev-server.js & node server.js",
     "build": "node build/build.js",
     "start": "node server.js",
     "web": "node server.js"
   },
   "dependencies": {
+    "@mdi/font": "^2.3.54",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "chart.js": "^2.7.2",
     "connect-history-api-fallback": "^1.5.0",
+    "downloadjs": "^1.4.7",
     "express": "^4.16.2",
+    "file-saver": "^1.3.8",
     "foreman": "2.0.0",
     "global-request-logger": "^0.1.1",
     "json-bigint": "^0.2.3",
+    "material-design-icons-iconfont": "^3.0.3",
     "material-icons": "^0.1.0",
+    "meraki-service": "file:./meraki-service",
     "moment": "^2.22.1",
     "moment-timezone": "^0.5.16",
     "morgan": "^1.9.0",
     "node-fetch": "^2.0.0",
     "request": "^2.85.0",
+    "save-csv": "^4.0.6",
     "serve-static": "^1.13.2",
     "uglify-js": "^3.3.23",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-chartjs": "^3.3.1",
+    "vue-lodash": "^2.0.0",
     "vue-moment": "^3.2.0",
     "vue-router": "^3.0.1",
     "vue-spinner": "^1.0.3",
