--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "webpack-merge": "^4.1.0"
   },
   "engines": {
-    "node": ">= 4.0.0",
+    "node": "8.9.4",
     "npm": ">= 3.0.0"
   },
   "browserslist": [
