--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node build/dev-server.js & node server.js",
-    "build": "node build/build.js", 
+    "build": "node build/build.js",
     "web": "node server.js"
   },
   "dependencies": {
@@ -24,7 +24,7 @@
     "json-bigint": "^0.2.3",
     "material-design-icons-iconfont": "^3.0.3",
     "material-icons": "^0.1.0",
-    "meraki-service": "file:./meraki-service",
+    "meraki-service": "git+https://github.com/dexterlabora/meraki-service.git",
     "moment": "^2.22.1",
     "moment-timezone": "^0.5.16",
     "morgan": "^1.9.0",
