--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "json-bigint": "^0.2.3",
     "material-design-icons-iconfont": "^3.0.3",
     "material-icons": "^0.1.0",
-    "meraki-service": "git+https://github.com/dexterlabora/meraki-service.git",
+    "meraki-service": "file:../meraki-service",
     "moment": "^2.22.1",
     "moment-timezone": "^0.5.16",
     "morgan": "^1.9.0",
@@ -36,6 +36,7 @@
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-chartjs": "^3.3.1",
+    "vue-chartkick": "^0.3.1",
     "vue-lodash": "^2.0.0",
     "vue-moment": "^3.2.0",
     "vue-router": "^3.0.1",
@@ -65,6 +66,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
+    "jsdoc-vue": "^1.0.0",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
@@ -77,7 +79,7 @@
     "url-loader": "^0.6.2",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.5.2",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^3.7.1",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
