updated ClientsPage with adjusted styling. removed drop down details.

--- a/package.json
+++ b/package.json
@@ -90,5 +90,9 @@
     "node": "8.9.4",
     "npm": ">= 3.0.0"
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
