--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@mdi/font": "^2.3.54",
     "axios": "^0.17.1",
+    "axios-debug-log": "^0.4.0",
     "body-parser": "^1.18.2",
     "chart.js": "^2.7.2",
     "connect-history-api-fallback": "^1.5.0",
+    "debug-http": "^1.1.0",
     "downloadjs": "^1.4.7",
     "express": "^4.16.2",
     "file-saver": "^1.3.8",
